--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@next/font": "^13.0.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"eslint-config-next": "^13.0.5",
+		"next": "^13.0.5",
+		"openai": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -34,5 +39,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"sass": "^1.56.1"
 	}
 }
