--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"openai": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1",
+		"react-loader-spinner": "^5.3.4",
+		"react-scripts": "^5.0.1",
+		"swr": "^1.3.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
